<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Incluir la barra de herramientas (toolbar) -->
    <include
        layout="@layout/toolbar" />

    <!-- Título de la pantalla -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/gray"
        android:gravity="center"
        android:text="@string/agregar_cita"
        android:textColor="#000000" />

    <!-- Contenedor principal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:padding="50dp"
        android:gravity="">

        <!-- Campos para la información de la cita -->
        <EditText
            android:id="@+id/Txt_FechaCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="date"
            android:hint="@string/fecha_cita"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/Txt_HoraCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hora_cita"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/Txt_DescripcionCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion_cita"
            android:inputType="textMultiLine"
            android:lines="4"
            android:textColorHint="#8D6E63"
            android:autofillHints="" />

        <!-- Botón para agregar la cita -->
        <Button
            android:id="@+id/Btn_AgregarCita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/agregar_cita"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>
</RelativeLayout>
