<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7E006064">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="289dp"
        android:background="@drawable/dani"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="16dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/inicio"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_inicio"
            android:drawablePadding="8dp"
            android:text="@string/pagina_dentista"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/grupo_citas"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_notas"
            android:drawablePadding="8dp"
            android:text="@string/ver_citas"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/grupo_pacientes"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_agregar_paciente"
            android:drawablePadding="8dp"
            android:text="@string/ver_paciente"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grupo_tratamientos"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_tratamientos"
            android:drawablePadding="8dp"
            android:text="@string/ver_tratamientos"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grupo_comunicacion"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_chat"
            android:drawablePadding="8dp"
            android:text="@string/ver_chat_asistente"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grupo_configuracion"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_configuracion"
            android:drawablePadding="8dp"
            android:text="@string/ver_configuracion"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grupo_salir"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_salir"
            android:drawablePadding="8dp"
            android:text="@string/pulsa_salir"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>