<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:context=".Pantalla_1_Dentista">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                layout="@layout/toolbar"/>

            <ImageView
                android:id="@+id/menu"
                android:layout_width="match_parent"
                android:layout_height="365dp"
                android:background="@drawable/doc"
                android:gravity="center"/>

            <TextView
                android:layout_width="413dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:background="#900765CA"
                android:text="@string/ver_bienvenida"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                tools:ignore="TextContrastCheck"/>

            <TextView
                android:id="@+id/grupo_actividades"
                android:layout_width="410dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:background="#8115787C"
                android:text="@string/ver_actividades"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#7E006064"/>

            <EditText
                android:id="@+id/noteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/ingrese_su_nota_aqu"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <Button
                android:id="@+id/saveNoteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar_nota"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/notesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="start"
        tools:ignore="VisualLintBounds">

        <include
            layout="@layout/nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
