<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Dentista"
    android:background="#2D96A5">

    <ImageView
        android:id="@+id/imageViewDentista"
        android:layout_width="137dp"
        android:layout_height="153dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="502dp"
        android:src="@drawable/dentista" />

    <EditText
        android:id="@+id/TxtDentistausuario"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="408dp"
        android:backgroundTint="#2C2929"
        android:hint="@string/dentista_usuario"
        android:textColor="#001944" />

    <EditText
        android:id="@+id/TxtDentistaContrasena"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="335dp"
        android:backgroundTint="#2C2929"
        android:hint="@string/contrasena_Dentista"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#001944"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnIniciarDentista"
        android:layout_width="156dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="238dp"
        android:backgroundTint="#026165"
        android:onClick="loginDentista"
        android:text="@string/inicio_logDentista"
        android:textColor="#FFFFFF" />

</RelativeLayout>